--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.projectVersion=1.0
 sonar.sources=.
 #sonar.exclusions=**/module/**/CartController.php, **/vendor/**/DistributorService.php
 sonar.exclusions= */*
-#sonar.inclusions= *
+sonar.inclusions= *
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 sonar.login=24b9b897759ac8a4994a76a9623b48b4f64ac7e8
